# cargo-workspace-example

./: Cargo.toml  README.md
.github/workflows/: bundle-with-config-and-version.yml  bundle-with-config.yml  release.yml  test-rs-workspace.yml
compute/: Cargo.toml
compute/examples/: compute.toml
compute/src/: main.rs
compute/src/algorithms/: fib.rs  mod.rs  pi.rs
jmath/: Cargo.toml
scripts/: launcher.sh
web/: Cargo.toml
web/src/: main.rs
web/src/routes/: add.rs  mod.rs
web/src/server/: app.rs
