[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chudnovsky = "0.0.1"
envy = "0.4.2"
num-bigint = "0.4.6"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
